// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render <Checkbox> component 1`] = `
<withState(withHandlers(Checkbox))>
  normal
</withState(withHandlers(Checkbox))>
`;

exports[`render <Checkbox> component 2`] = `
<withState(withHandlers(Checkbox))
  disabled={true}
>
  disabled
</withState(withHandlers(Checkbox))>
`;

exports[`render <Checkbox> component 3`] = `
<withState(withHandlers(Checkbox))
  checked={true}
>
  checked
</withState(withHandlers(Checkbox))>
`;

exports[`render <Checkbox> component 4`] = `
<withState(withHandlers(Checkbox))
  checked={true}
  disabled={true}
>
  checked disabled
</withState(withHandlers(Checkbox))>
`;
